

[package]
name = "datafusion-functions-extra"
version = "0.2.0"
edition = "2024"
description = "Extra Functions for DataFusion"
readme = "README.md"
license = "Apache-2.0"
keywords = ["aggregations", "datafusion", "functions-extra"]
repository = "https://github.com/datafusion-contrib/datafusion-functions-extra/"

[dependencies]
log = "0.4"
paste = "1.0"

[dependencies.datafusion]
default-features = false
version = "48.0"

[dev-dependencies]
criterion = "0.6"
rand = "0.8"
tokio = "1.46"

[dev-dependencies.arrow]
default-features = false
features = ["test_utils"]
version = "55.0"

[dev-dependencies.insta]
features = ["yaml"]
version = "1.43"

[[bench]]
name = "mode"
harness = false

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"
